--- a/book/geometry.tex
+++ b/book/geometry.tex
@@ -241,3 +241,23 @@ Special case of a triangle:
 
 \inputminted[fontsize=\footnotesize,linenos=true]{java}{code/triangleareacoord.java}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%
+\subsection{Convex Hull}
+\label{sec:convexhull}
+\index{Polygon!Convex Hull}
+\index{Convex Hull}
+
+A frequent favorite is the computation of the convex hull of a set of points in the plane,
+defined as the smallest convex polygon that encloses all points.
+
+\begin{figure}
+    \centering
+    % Wikipedia Public Domain image
+    \includegraphics[height=2in]{500px-ConvexHull.png}
+    \caption{Convex Hull - Rubber Band analogy. The convex hull is the convex polygon created 
+        when spanning a rubber band around a set of points.}
+    \label{fig:convexhull}
+\end{figure}
+
