--- a/book/stdlibs.tex
+++ b/book/stdlibs.tex
@@ -74,7 +74,7 @@ or multiplication.  As an aside, it is not necessary that the lower bits are uni
 Java's HashMap implementation does not perform a simple modulo, but rather draws
 from higher-order bits, too:
 
-\inputminted[fontsize=\footnotesize,linenos=true]{java}{code/javautilHashMap.java}
+\inputjava{javautilHashMap}
 
 In my 2011/H Solution~\ref{sec:2011-h-rally}, execution time reduced from 87 to 29 
 seconds by changing the hash function to use xor of all three components instead 
@@ -102,5 +102,135 @@ Each use entails pitfalls.
 \item \textbf{Make the ordering consistent with equals.}
     A comparator should return 0 iff .equals() returns true.   This is required, in particular, when
     using TreeSets.  See \href{http://docs.oracle.com/javase/6/docs/api/java/lang/Comparable.html#compareTo(T)}{compareTo}.
+
+\end{itemize}
+
+
+\section{Arbitrary Precision Integers}
+
+Java's \code{java.math.BigInteger} class provides support for arbitrary precision integer arithmetic.
+(\href{http://docs.oracle.com/javase/6/docs/api/java/math/BigInteger.html}{JDK Doc}).
+In addition to arbitrary precision integer arithmetic, this class provides
+
+\begin{itemize}
+    \item \textbf{Immutability.}  All operations return new BigIntegers.
+
+    \item \textbf{Modular arithmetic.}  
+        This includes computation of residues (\code{mod}), modular exponentiation (\code{modPow}),
+        and even multiplicative inverse (\code{modInverse}).
+
+    \item \textbf{Bit operations.}  BigInteger can be used as arbitrary-length bit vectors (and often make more sense
+        than using java.util.BitSet, which is a mutable implementation!)
+        Notable methods (in addition to \code{flipBit}, \code{clearBit}, \code{setBit}, \code{testBit}:
+    \begin{itemize}
+    \item \code{bitCount()} returns number of 1-bits for a positive number.
+\begin{minted}[fontsize=\footnotesize]{java}
+% System.out.println(BigInteger.valueOf(30).bitCount());
+4
+\end{minted}
+    \item \code{bitLength()} returns position of highest set bit.
+\begin{minted}[fontsize=\footnotesize]{java}
+% System.out.println(BigInteger.valueOf(16).bitLength());
+5
+% System.out.println(BigInteger.valueOf(15).bitLength());
+4
+\end{minted}
+    \item \code{getLowestSetBit()} returns position of lowest set bit.
+\begin{minted}[fontsize=\footnotesize]{java}
+% System.out.println(BigInteger.valueOf(30).getLowestSetBit());
+1
+% System.out.println(BigInteger.valueOf(31).getLowestSetBit());
+0
+\end{minted}
+    \end{itemize}
+        \item Support for \textbf{probabilistic primality testing}
+            (using \href{http://en.wikipedia.org/wiki/Miller–Rabin_primality_test}{Miller-Rabin})
+        via \code{isProbablePrime}, \code{nextProbablePrime}; support for GCD (via \code{gcd}).
+    \item Like all \code{java.lang.Integer} and \code{java.lang.Long} it provides support for
+        \textbf{base conversion} from/to strings for radices from 2 to 36.
+\end{itemize}
+
+\section{Bit Manipulation}
+
+\textbf{\code{java.util.BitSet}} provides support for \textbf{mutable bit vectors} of arbitrary size.
+Includes support for efficient iteration over set bits (\code{nextSetBit}); ditto for clear bits.
+\begin{minted}[fontsize=\footnotesize]{java}
+for (int i = bs.nextSetBit(0); i >= 0; i = bs.nextSetBit(i+1)) {
+    // operate on index i here
+}
+\end{minted}
+
+\textbf{\code{java.lang.Long.}}
+An often overlooked class is \code{java.lang.Long}, which also provides support for
+bit-twiddling on 64-bit longs.  Notable methods include
+\begin{itemize}
+\item \code{bitCount()} counts number of 1 bits.
+\item \code{highestOneBit()} returns a long with only the highest bit set. (Note: unlike \code{BigInteger.bitLength()},
+    this one returns not the position, but a long in which all other bits are cleared).
+\begin{minted}[fontsize=\footnotesize]{java}
+% System.out.println(Long.highestOneBit(16));
+16
+% System.out.println(Long.highestOneBit(15));
+8
+\end{minted}
+
+\item \code{lowestOneBit()} returns long with only the lowest bit set.
+\item \code{numberOfLeadingZeros} and \code{numberOfTrailingZeros} based on two's complement binary representation.
+\begin{minted}[fontsize=\footnotesize]{java}
+% System.out.println(Long.numberOfLeadingZeros(1));
+63
+% System.out.println(Long.numberOfLeadingZeros(1<<63));
+0
+% System.out.println(Long.numberOfLeadingZeros(2));
+62
+% System.out.println(Long.numberOfTrailingZeros(2));
+1
+\end{minted}
+
+\item \code{reverse} reverse bits.
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+\section{Input}
+
+The work horse for practically all input in ICPC problems is \code{java.util.Scanner}.  
+Some notes on its recommended use.
+
+\begin{itemize}
+\item The default delimiter is always almost sufficient.  However, it can be changed.
+    For instance, 2007/B Mobile's~\ref{sec:2007-b-mobile} input is free-formed S-Expressions
+    spanning multiple lines, which are parsed using a delimiter that includes whitespace and
+    a zero-width lookaround splitter, see Section~\ref{sec:lookaroundsplitting}.
+
+\item Scanner does not support peeking at the next token without consuming it.
+    Fortunately, this also isn't necessary in the vast majority of ICPC problems.  
+    Should it be necessary, use the Scanner to fill an ArrayDeque of input tokens which
+    can be peeked at.
+
+\item Line-oriented vs. not Line-oriented input.  Many ICPC problems, though not all, use
+    line-oriented input in which different pieces of information appear on different lines.
+    Beware when mixing \code{nextLine()} and the other \code{next()} methods, such as \code{nextInt()}.
+    For instance, to read the 2-line input
+    \begin{verbatim}
+    6 4
+    orange
+    \end{verbatim}
+    into 2 ints and 1 string, the following calls would be necessary:
+\begin{minted}[fontsize=\footnotesize]{java}
+    int a = s.nextInt();    // read 6
+    int b = s.nextInt();    // read 4, cursor is still one line 1
+    s.nextLine();           // skip remainder of line
+    String c = s.next();    // read orange; cursor now still on line 2
+\end{minted}
+    A recommended trick here is to nest Scanners and use only line-oriented 
+    input on the outer scanner, like so:
+\begin{minted}[fontsize=\footnotesize]{java}
+    Scanner is = new Scanner(s.nextLine()); // read line with "6 4" and move to next line
+    int a = is.nextInt();    // read 6
+    int b = is.nextInt();    // read 4
+    String c = s.nextLine(); // read orange and move to next line
+\end{minted}
+    This is particularly useful if parts of a line are optional, or depend on starting keywords.
 
 \end{itemize}
